2002-05-08  David Byers  <david.byers@swipnet.se>

	Automatic color selection for highlight colors:
	* compatibility.el (lyskom-color-values): Smarter definition that
	can handle both strings and specifiers in XEmacs.

	* vars.el.in (lyskom-face-schemes): Added incredibly ugly hack to
	put properties in lyskom-face-schemes.

	* utilities.el (lyskom-get-color-highlight): Modified to take list
	of RGB and distance from 0 to 1.

	Bug 525:
	* swedish-strings.el (lyskom-sv-mode-map): Bind fm till
	kom-filter-recipient.

	* english-strings.el (lyskom-en-mode-map): Bind fr till
	kom-filter-recipient.

2002-05-07  David Byers  <david.byers@swipnet.se>

        Every KOM client needs color model conversion code:
	* utilities.el (lyskom-string-to-rgb): New function.
	(lyskom-rgb-to-hls): New function.
	(lyskom-hls-to-rgb): New function.
	(lyskom-hls-to-rgb-value): New function.
	(lyskom-get-color-highlight): New function.
	(lyskom-string-to-rgb): New function.

2002-05-06  David Byers  <david.byers@swipnet.se>

	* utilities.el (lyskom-unicase): Get the length from the converted
	string and not the string, because for some reason they don't come
	out the same every time (and this is *probably* an Emacs bug).

2002-05-05  David Byers  <david.byers@swipnet.se>

	* commands2.el (kom-compare-texts): Catch the file-error that
	occurs when the external diff command is missing.

	* vars.el.in: Changed all hooks that are for users to play with
	from lyskom-<foo> to kom-<foo>. The lyskom-<foo> versions still
	work but are discouraged. Created dummy variables for some
	configuration variables that I did not dare change right now. It
	should now be possible to get all the user-accessible
	configuration parameters and hooks when doing apropos on ^kom.

	* async.el (lyskom-default-new-text-hook): Run kom-new-text-hook
	when running lyskom-new-text-hook.
	(lyskom-default-deleted-text-hook): Run kom-deleted-text-hook when
	running lyskom-deleted-text-hook.